--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HiStore - from mqufme</title>
+    <title>HiStore</title>
     <style>
         :root {
             --primary: #6C63FF;
@@ -693,7 +693,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">TechStore</div>
+        <div class="logo">HiStore - from mqufme</div>
         <nav>
             <ul>
                 <li><a href="#" class="nav-link active" data-page="catalog">Каталог</a></li>
