--- a/index.html
+++ b/index.html
@@ -753,9 +753,9 @@
             },
             {
                 id: 2,
-                name: "Ноутбук Apple MacBook Air M2",
+                name: "Ноутбук Apple MacBook Air 13 M2",
                 price: 119990,
-                image: "https://www.apple.com/newsroom/images/product/mac/standard/Apple_new-macbookair-wallpaper-screen_06132022_big.jpg.large.jpg",
+                image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ16kd2laQ5muhxKHzUpa-qpPk3rf2tt_1ntg&s",
                 rating: 5,
                 reviews: 94
             },
@@ -763,7 +763,7 @@
                 id: 3,
                 name: "Наушники Sony WH-1000XM4",
                 price: 24990,
-                image: "https://www.sony.com/image/5d9d5d5e5d5d5d5d5d5d5d5d5d5d5d5d?fmt=pjpeg&wid=330&hei=330",
+                image: "https://www.sony.ru/image/5d02da5df552836db894cead8a68f5f3?fmt=pjpeg&wid=330&bgcolor=FFFFFF&bgc=FFFFFF",
                 rating: 4,
                 reviews: 217
             },
@@ -771,7 +771,7 @@
                 id: 4,
                 name: "Умные часы Apple Watch Series 8",
                 price: 32990,
-                image: "https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/MPPP3?wid=1144&hei=1144&fmt=jpeg&qlt=90&.v=1660715723116",
+                image: "https://prostoreshop.ru/upload/iblock/f40/pbobwzb3ec2u4j08t64mwzch5dv8y2o8.jpg",
                 rating: 4,
                 reviews: 156
             },
@@ -793,9 +793,9 @@
             },
             {
                 id: 7,
-                name: "Смартфон iPhone 14 Pro",
+                name: "Смартфон iPhone 17 Pro",
                 price: 99990,
-                image: "https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-14-pro-finish-select-202209-6-7inch-deeppurple?wid=5120&hei=2880&fmt=p-jpg&qlt=80&.v=1663704190472",
+                image: "https://sotohit.ru/d/iphone_17_pro_max_silver_2.png",
                 rating: 5,
                 reviews: 210
             },
@@ -803,7 +803,7 @@
                 id: 8,
                 name: "Ноутбук ASUS ROG Zephyrus",
                 price: 149990,
-                image: "https://dlcdnwebimgs.asus.com/gain/4EF4F060-9A7F-4DF0-8A9A-3F5C8B0B6A5B",
+                image: "https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcSByaVs1EQD8WvCBeuNUquL0T8d1VfJGbAomqTWRbYtridxf06POgAGRum9vG40OQNe0fsrm8T_TLfdgjOnJBp0nnxIdIW1tt34jXQagXWg",
                 rating: 4,
                 reviews: 76
             }
