--- a/index.html
+++ b/index.html
@@ -755,23 +755,23 @@
                 id: 2,
                 name: "Ноутбук Apple MacBook Air 13 M2",
                 price: 119990,
-                image: "https://app-world.ru/image/cache/catalog/import_yml/222/87/1-2-500x500.png",
+                image: "https://cifra39.com/wa-data/public/shop/products/19/35/3519/images/11209/11209.970.png",
                 rating: 5,
                 reviews: 94
             },
             {
                 id: 3,
-                name: "Наушники Sony WH-1000XM4",
+                name: "Marshall Major IV",
                 price: 24990,
-                image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiuwoq8PCUa8PdjM8R001Q5krQq4QfNSL74g&s",
+                image: "https://technolove.ru/upload/iblock/f24/kko8sxoxd9zl7j8ayfy02a2sf1na6p45.png",
                 rating: 4,
                 reviews: 217
             },
             {
                 id: 4,
-                name: "Умные часы Apple Watch Series 8",
+                name: "Edifier N300",
                 price: 32990,
-                image: "https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/MPPP3?wid=1144&hei=1144&fmt=jpeg&qlt=90&.v=1660715723116",
+                image: "https://ru-netbox.ru/image/cache/catalog/products_2024/4345324231453453-417x417.jpg",
                 rating: 4,
                 reviews: 156
             },
@@ -779,7 +779,7 @@
                 id: 5,
                 name: "Apple Watch Series 10",
                 price: 54990,
-                image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBilnIsji6LZ5xqKK9pmWyX2tFHU5d8msgpA&s",
+                image: "https://www.apple.com/newsroom/images/2024/09/introducing-apple-watch-series-10/article/Apple-Watch-Series-10-lineup-240909_big.jpg.large.jpg",
                 rating: 4,
                 reviews: 83
             },
