--- a/index.html
+++ b/index.html
@@ -745,9 +745,9 @@
         const products = [
             {
                 id: 1,
-                name: "Смартфон Samsung Galaxy S23",
+                name: "iPhone 16",
                 price: 79990,
-                image: "https://images.samsung.com/is/image/samsung/p6pim/ru/2302/gallery/ru-galaxy-s23-s911-sm-s911bligser-534904738?$684_547_PNG$",
+                image: "https://twigo.ru/center/iblock/076/c0udm7s1wlwm8wa8yds2a8ukswx7171h/belyy-16-plyus.png",
                 rating: 5,
                 reviews: 128
             },
@@ -785,9 +785,9 @@
             },
             {
                 id: 6,
-                name: "Игровая консоль PlayStation 5",
+                name: "Игровая консоль PlayStation 5 Pro",
                 price: 49990,
-                image: "https://gmedia.playstation.com/is/image/SIEPDC/ps5-product-thumbnail-01-en-14sep21?$1600px--t$",
+                image: "https://gadgetclick.ru/wa-data/public/shop/products/67/11/11167/images/105590/105590.970.png",
                 rating: 5,
                 reviews: 342
             }
