--- a/index.html
+++ b/index.html
@@ -745,9 +745,9 @@
         const products = [
             {
                 id: 1,
-                name: "iPhone 16",
+                name: "iPhone 13",
                 price: 79990,
-                image: "https://twigo.ru/center/iblock/076/c0udm7s1wlwm8wa8yds2a8ukswx7171h/belyy-16-plyus.png",
+                image: "https://tehnoyard.ru/image/cache/catalog/Tovari/iphone11/13white33-1000x1000.png",
                 rating: 5,
                 reviews: 128
             },
@@ -785,9 +785,9 @@
             },
             {
                 id: 6,
-                name: "Игровая консоль PlayStation 5 Pro",
+                name: "Игровая консоль PlayStation 5",
                 price: 49990,
-                image: "https://gadgetclick.ru/wa-data/public/shop/products/67/11/11167/images/105590/105590.970.png",
+                image: "https://static.insales-cdn.com/files/1/2481/32172465/original/1_1700394520623-1700394521568.webp",
                 rating: 5,
                 reviews: 342
             }
